--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "discord.js": "^12.0.2",
     "express": "^4.17.1",
+    "node-cron": "^3.0.0",
     "quick.db": "^7.1.3",
     "rss-parser": "^3.7.5"
   }
